--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,37 +1,66 @@
 @font-face {
-  font-family: 'dungeon';
-  src: url('./assets/DUNGRG__.TTF');
+  font-family: 'pixel';
+  src: url('./assets/Pixeled.ttf');
 }
-*{box-sizing: border-box;}
-body{background:darkgray;
-  font-family: 'dungeon','Times New Roman', Times, serif;
-  cursor: url('./assets/BaldursGate.cur'), progress;
+*{box-sizing: border-box;
+  cursor: url('./assets/pxlSword.cur'), progress;}
+body{
+  background-image: url('./assets/table.png') ;
+  font-family: 'pixel','Times New Roman', Times, serif;
+  font-size: xx-small;
+  cursor: url('./assets/pxlSword.cur'), progress;
   width: 99vw;
   height: 95vh;
-  
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 #gameScreen{
   width: 99vw;
   height: 95vh;
   margin: auto;
   display: grid;
-  grid-template: 4fr 6fr/1fr 6fr;
-  border: 5px solid black
+  grid-template: 2fr 6fr/2fr 9fr;
+  border: 5px solid black;
+  background-image: url('./assets/table.png');
+  opacity: 1;
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 .title{
   margin: auto;
+  font-size: small;
+  background-color: chartreuse;
+}
+.startTitle{
+  margin: none;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  font-size: xx-large;
+  text-shadow:
+  0.07em 0 black,
+  0 0.07em black,
+  -0.07em 0 black,
+  0 -0.07em gold;
+  color: goldenrod;
 }
 .card{
   border: 5px solid black;
   display: grid;
   grid-template-rows: 20% 80%;
 }
+.cardShop{
+  border: 5px solid black;
+  display: grid;
+  grid-template-rows: 10% 90%;
+}
 #stats{
   display: flex;
   flex-flow: row wrap  ;
   justify-content: space-evenly;
-  background-color: aqua;
+  background-color: red;
   height:100%;
+  font-size: 8px;
 }
 #A{
   display: flex;
@@ -48,7 +77,6 @@ body{background:darkgray;
 
 .storeButt[data-title]:hover::after {
   content: attr(data-title);
-  font-size: small;
   color: white;
   font-weight: 600;
   position: absolute;
@@ -56,4 +84,146 @@ body{background:darkgray;
   z-index: 1;
   border: red ridge 3px;
   margin: auto;
+  font-family: 'pixel','Times New Roman', Times, serif;
+  font-size: xx-small;
 }
+button{
+  font-family: 'pixel','Times New Roman', Times, serif;
+  font-size: xx-small;
+}
+
+#startScreen{
+  width: 99vw;
+  height: 95vh;
+  margin: auto;
+  z-index: 2;
+  background-image: url('./assets/table.png');
+  opacity: 1;
+  background-repeat: no-repeat;
+  background-size:cover;
+  position: absolute;
+}
+.tarot{
+  background-color: white;
+  width: 30vmin;
+  z-index: 3;
+  aspect-ratio: 4/7;
+  position:absolute;
+}
+#tarotWrapWrap{
+  width: 99vw;
+  height: 95vh;
+  display: grid;
+  place-items: center;
+}
+#tarotWrap{
+  width: 30vmin;
+  aspect-ratio: 4/7;
+  z-index: 5;
+  background: none;
+}
+.tarot:nth-child(1){
+  transform: translateX(30%) rotate(5deg);
+  background-image: url(./assets/hermitChar.png);
+  background-size:cover;
+  border-radius: 2vmin;
+  border: black ridge 2px;
+  box-shadow: 1px 1px 3px 3px black;
+  transition: all 1200ms cubic-bezier(0.5, 0.5, 0.25, 0.95);
+  filter: grayscale(75%);
+  }
+.tarot:nth-child(2){
+  transform: rotate(-2deg) translateX(-20%);
+  background-image: url(./assets/empChar.png);
+  background-size:cover;
+  border-radius: 2vmin;
+  border: black ridge 2px;
+  box-shadow: 1px 1px 3px 3px black;
+  transition: all 1200ms cubic-bezier(0.5, 0.5, 0.25, 0.95);
+  filter: grayscale(75%);
+  }
+.tarot:nth-child(3){
+  transform: translateX(-30%) rotate(-5deg);
+  background-image: url(./assets/wizChar.png);
+  background-size:cover;
+  border-radius: 2vmin;
+  border: black ridge 2px;
+  box-shadow: 1px 1px 3px 3px black;
+  transition: all 1200ms cubic-bezier(0.5, 0.5, 0.25, 0.95);
+  filter: grayscale(75%);
+  }
+.tarot:nth-child(4){
+  transform: translateX(0%) rotate(0deg);
+  background-image: url(./assets/priestChar.png);
+  background-size:cover;
+  border-radius: 2vmin;
+  border: black ridge 2px;
+  box-shadow: 1px 1px 3px 3px black;
+  transition: all 1200ms cubic-bezier(0.5, 0.5, 0.25, 0.95);
+  filter: grayscale(75%);
+  }
+button.fill-div {
+  display: relative;
+  text-decoration: none;
+  background: none;
+  border: none;
+  height: 100%;
+  width: 100%;
+  z-index: 4;
+  transition: all 1200ms cubic-bezier(0.5, 0.5, 0.25, 0.95);
+}
+.tarotTransA{
+  transform: translateX(210%) rotate(0deg) !important;
+}
+.tarotTransA:hover{
+  filter: none !important;
+}
+.tarotTransA>button:hover{
+  background: none !important;
+  transition: all  cubic-bezier(0.5, 0.5, 0.25, 0.95)!important;
+  border: ridge black 4px;
+  box-shadow: 0px 0px 10px 10px goldenrod;
+  border-radius: 2vmin;
+}
+.tarotTransB{
+  transform: translateX(-70%) rotate(0deg) !important;
+}
+.tarotTransB:hover{
+  filter: none !important;
+}
+.tarotTransB>button:hover{
+  background: none !important;
+  transition: all  cubic-bezier(0.5, 0.5, 0.25, 0.95) !important;
+  border: ridge black 4px;
+  box-shadow: 0px 0px 10px 10px goldenrod;
+  border-radius: 2vmin;
+}
+.tarotTransC{
+  transform: translateX(-210%) rotate(0deg) !important;
+}
+.tarotTransC:hover{
+  filter: none !important;
+}
+.tarotTransC>button:hover{
+  background: none !important;
+  
+  transition: all  cubic-bezier(0.5, 0.5, 0.25, 0.95) !important;
+  border: ridge black 4px;
+  box-shadow: 0px 0px 10px 10px goldenrod;
+  border-radius: 2vmin;
+}
+.tarotTransD{
+  transform: translateX(70%) rotate(0deg) !important;
+}
+.tarotTransD:hover{
+  filter: none !important;
+}
+.tarotTransD>button:hover{
+  background: none !important;
+  opacity:0.7;
+  transition: all  cubic-bezier(0.5, 0.5, 0.25, 0.95) !important;
+  border: ridge black 4px;
+  box-shadow: 0px 0px 10px 10px goldenrod;
+  border-radius: 2vmin;
+}
+
