--- a/react/src/App.css
+++ b/react/src/App.css
@@ -2,6 +2,9 @@
   font-family: 'pixel';
   src: url('./assets/Pixeled.ttf');
 }
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
 *{box-sizing: border-box;
   cursor: url('./assets/pxlSword.cur'), progress;}
 body{
@@ -13,6 +16,10 @@ body{
   height: 95vh;
   background-repeat: no-repeat;
   background-size:cover;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 #gameScreen{
   width: 99vw;
@@ -20,7 +27,7 @@ body{
   margin: auto;
   display: grid;
   grid-template: 2fr 6fr/2fr 9fr;
-  border: 5px solid black;
+  border: none;
   background-image: url('./assets/table.png');
   opacity: 1;
   background-repeat: no-repeat;
@@ -29,7 +36,7 @@ body{
 .title{
   margin: auto;
   font-size: small;
-  background-color:rgba(204, 30, 30, 0.4);
+  background-color:rgba(0,0,0, 0.4);
   background-size: contain;
   width: 100%;
   height:100%;
@@ -108,7 +115,27 @@ body{
 color: goldenrod;}
 #C{border: 5px solid black;
   height:100%;
-  background-color: purple;}
+  background-color: black;
+  display: grid;
+  grid-template-columns: 1f 1fr;
+}
+#C:nth-child(1){
+  background-size: contain;
+  background:url(./assets/hermitChar.png);
+  background-repeat: no-repeat;
+}
+#C:nth-child(2){
+  background-size: contain;
+  background:url(./assets/tower.png);
+  background-repeat: no-repeat;
+}
+.charPortraitTwo{background:url(./assets/empChar.png) !important;}
+.charPortraitThree{background:url(./assets/wizChar.png)!important;}
+.charPortraitThree{background:url(./assets/priestChar.png)!important;}
+.encounterTwo{background:url(./assets/hangedEncounter.png)!important;}
+.encounterThree{background:url(./assets/strengthEncounter.png)!important;}
+.encounterFour{background:url(./assets/moonEncounter.png)!important;}
+.encounterFive{background:url(./assets/wheelEncounter.png)!important;}
 .storeButt{
   background-color: rgba(0,0,0, 0.7);
   color: goldenrod;
@@ -118,6 +145,9 @@ color: goldenrod;}
   0 0.07em black,
   -0.07em 0 black,
   0 -0.07em gold;
+}
+.storeButt:hover{
+  box-shadow: 0px 0px 5px 5px goldenrod;
 }
 
 .storeButt[data-title]:hover::after {
