--- a/react/src/App.css
+++ b/react/src/App.css
@@ -31,7 +31,7 @@ body{
   max-height: 100%;
   margin: auto;
   display: grid;
-  grid-template: 2fr 6fr/2fr 9fr;
+  grid-template: 3fr 6fr/2fr 9fr;
   border: none;
   background-image: url('./assets/table.png');
   opacity: 1;
@@ -92,7 +92,7 @@ body{
 #stats{
   display: grid;
   grid-template-columns: repeat(8,12.5%) ;
-  grid-template-rows: repeat(3,33%);
+  grid-template-rows: repeat(3,34%);
   background-image: none;
   background-size: cover;
   background-repeat:repeat;
@@ -431,7 +431,36 @@ button.fill-div {
   border: black ridge 2px;
   box-shadow: 1px 1px 3px 3px black;
   height:80%;
-
+}
+.enemyOne:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyTwo:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyThree:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyFour:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyFive:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemySix:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemySeven:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyEight:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyNine:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
+}
+.enemyTen:hover{
+  box-shadow: 0px 0px 1px 1px hsl(0, 55%, 39%);
 }
 .enemyTwo{
   background-image: url(./assets/wandPageEnemy.png);
@@ -561,4 +590,17 @@ button.fill-div {
   white-space: pre;
   display: flex;
   justify-content: space-between;
+}
+ol{
+  list-style-position: inside;
+  font-size: xx-small;
+  padding: 0rem;
+  margin:0rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+li{
+  padding: 0rem;
+  margin:1rem;
 }
